    -   Filtered out Program events from the drum-mode piano roll.
        -   While working this issue, the following problems
            were found and fixed.
            -   The saving of Program events was fixed to calculate
                the proper time-stamp.
            -   Program events can be moved up and down by dragging,
                as well as by the line-dragging method.
-   Pressing the finger button in the pattern editor now
    also enters paint mode in the event pane. The selected event
    category can the be entered by a click, and then moved up and
    down in the data pane.

### Added

-   This macro is defined by default: SEQ66\_SHOW\_GM\_PROGRAM\_NAME
    to show the GM patch names in the pattern editor data pane
    instead of just the patch/program number. See seq66\_features.h.
-   Added a new configuration file, '.patches' that can be used
    to show non-GM device program names in lieu of the built-in
    GM program name. Also specifiable in the Preferences / Session
    tab.

## [0.99.18] - 2025-02-03

More developer-discovered issues :-(

### Added

-   Added the dark-theme and dark-ui options to the user file for
    handling GUI elements that are otherwise difficult to see.
-   Added an option to dump the current palette while automatically
    inverting to create the --invert palette. It's activated by the
    SEQ66\_PROVIDE\_AUTO\_COLOR\_INVERSION macro.
-   Added a Help / View Log function to bring up the latest log
    text (if a log file is enabled).

### Changed

-   contrib/scripts/jackctl.
    -   Beefed up the jackctl script to facilitate testing.
    -   Added the "-u" option to a2jmidid in the jackctl script, to
        avoid undesirable changes to port names.
    -   Added support for raysession and agordejo.
-   Refactored the copy-configuration and delete-configuration
    functions to make them more robust and less dependent on
    file-extension.  Depends on the SEQ66\_KEEP\_RC\_FILE\_LIST
    macro.