@@ -1973,7 +1973,7 @@ in the piano roll. [ p x ]
           <string/>
          </property>
          <property name="flat">
-          <bool>true</bool>
+          <bool>false</bool>
          </property>
         </widget>
        </item>
